# TileDB

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  install.sh
benchmark/: README
benchmark/datagen/: Makefile  README  generate_dense_array_by_chunks.cc  generate_dense_array_for_vertica.cc  generate_random_coordinates_for_random_reads.cc  generate_random_coords_and_values_for_random_updates.cc
benchmark/datagen/ais/: remove_duplicate_entries_from_ais.cc  test_inputfile
benchmark/hdf5/: Makefile  README  loaddata.cc  loadfrombin.cc  loadfrombin_zipped.cc  parallel_rdwr.cc  ploadfrombin.cc  random_reads.cc  readbychunk.cc  readdata.cc  sequential_read_by_chunk.cc  updatedata.cc
benchmark/hdf5/mpiio/: Makefile  mpiio_chunk_ind_read.c  mpiio_disk_read_test.c  mpiio_load_from_bin.c  mpiio_load_from_bin_zipped.c  mpiio_random_ind_read.c  mpiio_random_update.c
benchmark/scidb/: README
benchmark/scidb/configs/: config.ini.hdd  config.ini.ssd
benchmark/scidb/datagen/: generate_dense_array_by_chunks.cc
benchmark/scidb/dense/: create-and-load-dense-zipped.sh  create-and-load-dense.sh
benchmark/scidb/sparse/: random_sparse_query.sh
benchmark/tiledb/: Makefile  README  README.md  tiledb_tests.h
benchmark/tiledb/dense/: dense_consolidate.cc  dense_create.cc  dense_load.cc  dense_random_read.cc  dense_read.cc  dense_sequential_chunk_read  dense_sequential_load_by_chunk.cc  dense_sequential_read_by_chunk.cc  dense_update.cc
benchmark/tiledb/sparse/: Makefile  sparse_create.cc  sparse_create_vessel_traffic.cc  sparse_load_vessel_traffic.cc  sparse_parallel_load_vessel_traffic.cc  sparse_parallel_read_vessel_traffic.cc  sparse_read_vessel_traffic.cc  sparse_update_multi_fragments.cc
benchmark/vertica/: README
benchmark/vertica/dense/: define_dense_schema.sql  define_dense_schema_ram.sql  define_dense_schema_withrle.sql  define_dense_schema_withtileid.sql  define_dense_schema_withtileid_withrle.sql  delete_dense_table.sql  delete_dense_table_ram.sql  delete_dense_table_withrle.sql  delete_dense_table_withtileid.sql  delete_dense_table_withtileid_withrle.sql  load_data_dense.sh  load_data_dense_ram.sh  load_data_dense_withrle.sh  query-dense-one-chunk.sql  query-dense-partial-chunk.sql  query-dense-ram-one-chunk.sql  query-dense-ram-partial-chunk.sql  query-dense-ram-thin-column.sql  query-dense-ram-two-chunk.sql  query-dense-thin-column.sql  query-dense-two-chunk.sql  query-dense-withtileid.sql  random-dense-ram.sql  random-dense.sql
benchmark/vertica/sparse/: batchrun_random_sparse_queries.sh  compile.sh  define_sparse_schema.sql  define_sparse_schema_rle.sql  delete_sparse_rle_tables.sql  delete_sparse_table.sql  delete_table_with_tileid.sql  load_data.sql  load_data_sparse.sh  load_data_sparse_rle.sh  load_data_with_tileid.sh  load_data_with_tileid.sql  query_box_100k-denseregion.sql  query_box_100k-sparseregion.sql  query_box_10M-denseregion.sql  query_box_10k-densereqion.sql  query_box_10k-sparseregion.sql  query_box_1M-denseregion.sql  query_box_1M-sparseregion.sql  query_box_50M-denseregion.sql  query_box_with_tileid_example.sql  random_sparse_query.sh  sparsearrayreader.cc  sparsecolreader.sql
cmake/Modules/: FindHDFS.cmake  FindJVM.cmake  MuParserX.cmake
core/: CMakeLists.txt  TAGS
core/include/array/: array.h  array_iterator.h  array_read_state.h  array_schema.h  array_schema_c.h
core/include/c_api/: c_api.h  tiledb.h  tiledb_constants.h  tiledb_storage.h  tiledb_utils.h
core/include/expressions/: expression.h  expression_c.h
core/include/fragment/: book_keeping.h  buffer.h  (+3 more)
core/src/: CMakeLists.txt
core/src/array/: array.cc  array_iterator.cc  array_read_state.cc  array_schema.cc
core/src/c_api/: c_api.cc  tiledb.cc  tiledb_utils.cc
core/src/expressions/: expression.cc
core/src/fragment/: book_keeping.cc  buffer.cc  fragment.cc  read_state.cc  write_state.cc
core/src/metadata/: metadata.cc
core/src/misc/: constants.cc  fs_utils.cc  hdfs_utils.cc  hdfs_utils.cc.orig  url.cc  utils.cc
core/src/storage_manager/: storage_fs.cc  storage_gcs.cc  storage_hdfs.cc  storage_library_load.cc  storage_manager.cc  storage_manager_config.cc  storage_posixfs.cc
examples/: CMakeLists.txt  expected_results  run_examples.sh
examples/src/: tiledb_array_aio_read_dense.cc  tiledb_array_aio_write_dense.cc  tiledb_array_consolidate.cc  tiledb_array_create_dense.cc  tiledb_array_create_sparse.cc  tiledb_array_filter_dense_1.cc  tiledb_array_iterator_dense.cc  tiledb_array_iterator_sparse.cc  tiledb_array_parallel_consolidate_dense.cc  tiledb_array_parallel_consolidate_sparse.cc  tiledb_array_parallel_read_dense_1.cc  tiledb_array_parallel_read_dense_2.cc  tiledb_array_parallel_read_mpi_io_dense.cc  tiledb_array_parallel_read_sparse_1.cc  tiledb_array_parallel_read_sparse_2.cc  tiledb_array_parallel_write_dense_1.cc  tiledb_array_parallel_write_dense_2.cc  tiledb_array_parallel_write_sparse_1.cc  tiledb_array_parallel_write_sparse_2.cc  tiledb_array_primitive.cc  tiledb_array_read_dense_1.cc  tiledb_array_read_dense_2.cc  tiledb_array_read_dense_3.cc  tiledb_array_read_dense_sorted.cc  tiledb_array_read_sparse_1.cc  tiledb_array_read_sparse_2.cc  tiledb_array_read_sparse_sorted.cc  tiledb_array_update_dense_1.cc  tiledb_array_update_dense_2.cc  tiledb_array_update_sparse_1.cc  tiledb_array_update_sparse_2.cc  tiledb_array_write_dense_1.cc  tiledb_array_write_dense_2.cc  tiledb_array_write_dense_sorted.cc  tiledb_array_write_sparse_1.cc  tiledb_array_write_sparse_2.cc  tiledb_array_write_sparse_3.cc  tiledb_array_write_sparse_4.cc  tiledb_catching_errors.cc  tiledb_clear_delete_move.cc  (+9 more)
spark/: Makefile  README  pom.xml
spark/conf/: tiledb-env.sh
test/: CMakeLists.txt
test/src/c_api/: c_api_array_schema_spec.cc
test/src/misc/: utils_spec.cc
vagrant/: Readme.md
vagrant/centos7/: VagrantFile  bootstrap.sh
vagrant/trusty64/: VagrantFile  bootstrap.sh
verify/: Makefile  verify_tiledb_hdf5_dense_multiple_reads.cc  verify_tiledb_hdf5_dense_single_read.cc  verify_tiledb_hdf5_dense_update_and_multiple_reads.cc
(+46 files in other folders)
